[gd_scene load_steps=39 format=2]

[ext_resource path="res://Gameplay/Entities/Units/Player/elementalist.png" type="Texture" id=1]
[ext_resource path="res://Gameplay/Entities/Units/Player/elementalist_torso.png" type="Texture" id=2]
[ext_resource path="res://Gameplay/Entities/Units/Player/elementalist_arms.png" type="Texture" id=3]
[ext_resource path="res://Gameplay/UI/SmallHealthBar/small_white_health_bar.png" type="Texture" id=4]
[ext_resource path="res://Gameplay/AbilitySystem/Abilities/HealingStream/HealingStream.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gameplay/UI/SmallHealthBar/SmallHealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Gameplay/AbilitySystem/Abilities/AstralGuidance/AstralGuidance.tscn" type="PackedScene" id=7]
[ext_resource path="res://Gameplay/AbilitySystem/Abilities/Fireball/Fireball.tscn" type="PackedScene" id=8]
[ext_resource path="res://Gameplay/AbilitySystem/Abilities/AutoAttack/AutoAttack.tscn" type="PackedScene" id=9]
[ext_resource path="res://Gameplay/AbilitySystem/Abilities/Consecration/Consecration.tscn" type="PackedScene" id=10]
[ext_resource path="res://Gameplay/Entities/Inventory/Inventory.tscn" type="PackedScene" id=11]
[ext_resource path="res://Gameplay/Entities/Units/Player/Player.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_local_to_scene = true
resource_name = "casting_down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
resource_local_to_scene = true
resource_name = "casting_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_local_to_scene = true
resource_name = "casting_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_local_to_scene = true
resource_name = "casting_up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=5]
resource_local_to_scene = true
resource_name = "idle_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_local_to_scene = true
resource_name = "idle_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]
resource_local_to_scene = true
resource_name = "idle_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=8]
resource_local_to_scene = true
resource_name = "idle_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=9]
resource_local_to_scene = true
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ArmsSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_local_to_scene = true
resource_name = "walking_left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 6, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ArmsSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_local_to_scene = true
resource_name = "walking_right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 10, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ArmsSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_local_to_scene = true
resource_name = "walking_up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 14, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ArmsSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_local_to_scene = true
resource_name = "casting_down"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=14]
resource_local_to_scene = true
resource_name = "casting_left"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=15]
resource_local_to_scene = true
resource_name = "casting_right"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=16]
resource_local_to_scene = true
resource_name = "casting_up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=17]
resource_local_to_scene = true
resource_name = "idle_down"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
resource_local_to_scene = true
resource_name = "idle_left"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=19]
resource_local_to_scene = true
resource_name = "idle_right"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=20]
resource_local_to_scene = true
resource_name = "idle_up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=21]
resource_local_to_scene = true
resource_name = "walking_down"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=22]
resource_local_to_scene = true
resource_name = "walking_left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 6, 4 ]
}

[sub_resource type="Animation" id=23]
resource_local_to_scene = true
resource_name = "walking_right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 10, 8 ]
}

[sub_resource type="Animation" id=24]
resource_local_to_scene = true
resource_name = "walking_up"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 14, 12 ]
}

[sub_resource type="CircleShape2D" id=25]
radius = 32.0

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 32, 64 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 3

[node name="TorsoSprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="TorsoSprite"]
anims/casting_down = SubResource( 1 )
anims/casting_left = SubResource( 2 )
anims/casting_right = SubResource( 3 )
anims/casting_up = SubResource( 4 )
anims/idle_down = SubResource( 5 )
anims/idle_left = SubResource( 6 )
anims/idle_right = SubResource( 7 )
anims/idle_up = SubResource( 8 )
anims/walking_down = SubResource( 9 )
anims/walking_left = SubResource( 10 )
anims/walking_right = SubResource( 11 )
anims/walking_up = SubResource( 12 )

[node name="ArmsSprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 3 )
vframes = 4
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArmsSprite"]
anims/casting_down = SubResource( 13 )
anims/casting_left = SubResource( 14 )
anims/casting_right = SubResource( 15 )
anims/casting_up = SubResource( 16 )
anims/idle_down = SubResource( 17 )
anims/idle_left = SubResource( 18 )
anims/idle_right = SubResource( 19 )
anims/idle_up = SubResource( 20 )
anims/walking_down = SubResource( 21 )
anims/walking_left = SubResource( 22 )
anims/walking_right = SubResource( 23 )
anims/walking_up = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 25 )

[node name="Clickbox" type="Area2D" parent="."]
position = Vector2( 0, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickbox"]
shape = SubResource( 26 )

[node name="Inventory" parent="." instance=ExtResource( 11 )]

[node name="Abilities" type="Node" parent="."]

[node name="AutoAttack" parent="Abilities" instance=ExtResource( 9 )]

[node name="Fireball" parent="Abilities" instance=ExtResource( 8 )]

[node name="Consecration" parent="Abilities" instance=ExtResource( 10 )]

[node name="HealingStream" parent="Abilities" instance=ExtResource( 5 )]

[node name="AstralGuidance" parent="Abilities" instance=ExtResource( 7 )]

[node name="StatusEffects" type="Node" parent="."]

[node name="Auras" type="Node" parent="."]

[node name="AutoAttackTimer" type="Timer" parent="."]

[node name="UnitProfile" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -152.0
margin_right = 56.0
margin_bottom = -123.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UnitProfile"]
margin_left = 18.0
margin_right = 93.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UnitProfile/VBoxContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "Test name"
align = 1

[node name="SmallHealthBar" parent="UnitProfile/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 75.0
margin_bottom = 28.0
mouse_filter = 2
texture_progress = ExtResource( 4 )
[connection signal="animation_finished" from="TorsoSprite/AnimationPlayer" to="." method="_on_TorsoAnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="ArmsSprite/AnimationPlayer" to="." method="_on_ArmsAnimationPlayer_animation_finished"]
[connection signal="input_event" from="Clickbox" to="." method="_on_Clickbox_input_event"]
[connection signal="timeout" from="AutoAttackTimer" to="." method="_on_AutoAttackTimer_timeout"]
